Added files via upload

--- a/index.html
+++ b/index.html
@@ -4,34 +4,93 @@
 <HEAD>
     <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=big5">
 
-    <TITLE>ã€Šç¶“çµ¡ç”Ÿæ´»ã€å¥åº·å¿«æ´»ã€‹</TITLE>
+    <TITLE>¡m¸gµ¸¥Í¬¡¡B°·±d§Ö¬¡¡n</TITLE>
 </HEAD>
 
 <BODY>
-    <H2>ã€Šç¶“çµ¡ç”Ÿæ´»ã€å¥åº·å¿«æ´»ã€‹</H2>
+    <H2>¡@¡@¡@¡@¡m¸gµ¸¥Í¬¡¡B°·±d§Ö¬¡¡n</H2>
 
     <TABLE BORDER="0" WIDTH="88%" ID="table1" SUMMARY="">
         <TR>
-            <TD WIDTH="200">ã€€</TD>
+            <TD WIDTH="200">¡@</TD>
 
             <TD>
-                <H3 DIR="ltr" XMLNS="http://www.w3.org/1999/xhtml" STYLE="" ALIGN="left"><SPAN STYLE="font-weight: 400"><SPAN ID="sites-page-title">å ±åæ‚¨å–œæ­¡çš„èª²ç¨‹</SPAN></SPAN></H3>â˜… é¤Šç”Ÿè‰¾ç¸ï¼šä»¥è‰¾è‰æ‰€è£½ä½œçš„è‰¾æ¢ä¾†åšäººé«”ç©´ä½çš„æº«ç¸ç¨±ã€Œè‰¾ç¸ã€ï¼Œä¸­é†«ç†ç™‚çš„éžä¾µå…¥æ€§ç™‚æ³•~ <A HREF="https://sites.google.com/site/jinglou888reg/home?pli=1#intro_b">â€¦â€¦æ›´å¤š</A><BR>
-                â˜… æŒ‰æ‘©ä¸åƒ…è®“èº«é«”ç”¦é†’ï¼Œè§£é–‹é˜»å¡žèˆ‡ç–²å‹žï¼Œé‚„èƒ½å¢žé€²å¤«å¦»èˆ‡è¦ªå­é–“çš„é—œä¿‚~ <A HREF="https://sites.google.com/site/jinglou888reg/home?pli=1#intro_a">â€¦â€¦æ›´å¤š</A>
+                <H2 DIR="ltr" XMLNS="http://www.w3.org/1999/xhtml" STYLE="" ALIGN="left"><SPAN STYLE="font-weight: 400"><SPAN ID="sites-page-title">³ø¦W±z³ßÅwªº½Òµ{</SPAN></SPAN></H2>¡¹ ¾i¥Í¦ã¨b¡G¥H¦ã¯ó©Ò»s§@ªº¦ã±ø¨Ó°µ¤HÅé¥Þ¦ìªº·Å¨bºÙ¡u¦ã¨b¡v¡A¤¤Âå²zÀøªº«D«I¤J©ÊÀøªk~ <A HREF="#intro_b">¡K¡K§ó¦h</A><BR>
+                ¡¹ «ö¼¯¤£¶ÈÅý¨­Åéµd¿ô¡A¸Ñ¶}ªý¶ë»P¯h³Ò¡AÁÙ¯à¼W¶i¤Ò©d»P¿Ë¤l¶¡ªºÃö«Y~ <A HREF="#intro_a">¡K¡K§ó¦h</A>
 
-                <P>ã€€<IMG SRC="images/CapturedPic_059.png" ALT=""></P>
+                <P>¡@<IMG SRC="images/CapturedPic_059.png" ALT=""></P>
 
-                <H3 STYLE="clear:both;text-align:left">ç¶“çµ¡æŒ‰æ‘©ç­ï¼š</H3>
+                <H3 STYLE="clear:both;text-align:left">¸gµ¸«ö¼¯¯Z¡G</H3>
 
-                <P STYLE="clear:both;text-align:left;margin-left:40px">å°åŒ—ç­- (å‘¨äºŒ)æ™šä¸Š6:30-8:30, 5/17 5/24 5/31 6/7 ï¼ˆé¡æ»¿ï¼‰<BR>
-                ã€€ã€€ï¼</P>
+                <P STYLE="clear:both;text-align:left;margin-left:40px">¥x¥_¯Z- ¤­¤ë¯Z ÃBº¡<BR>
+                ¡@¡@¡Ð</P>
 
-                <P STYLE="clear:both;text-align:left;margin-left:40px">æ–°ç«¹ç­- (å‘¨å…­)ä¸‹åˆ2:00-4:00, 5/14 5/21 5/28 6/4</P>
+                <P STYLE="clear:both;text-align:left;margin-left:40px">·s¦Ë¯Z- (©P¤»)¤U¤È2:00-4:00, 5/14 5/21 5/28 6/4</P>
 
                 <DIV STYLE="margin-left:40px">
                     <A HREF="http://goo.gl/forms/WrLbt5chLf"><IMG SRC="images/register.PNG" STYLE="display:block;margin-right:auto;text-align:left" BORDER="0" ALT=""></A>
+                    <BR>
                 </DIV>
 
-                <P>ã€€</P>
+                <H3 STYLE="clear:both;text-align:left">¾i¥Í¦ã¨b¯Z¡G</H3>
+
+                <P STYLE="clear:both;text-align:left;margin-left:40px">·s¦Ë¯Z- (©P¤»)¤W¤È10:00-12:00, 5/14</P>
+
+                <DIV STYLE="margin-left:40px">
+                    <A HREF="http://goo.gl/forms/dqcN7zI9Gv"><IMG SRC="images/register.PNG" STYLE="display:block;margin-right:auto;text-align:left" BORDER="0" ALT=""></A>
+                    <BR>
+                </DIV>
+
+<hr style="background-color:#000000;color:#000000;width:100%;text-align:left" />
+<h2><a name="TOC-4-25-"></a>½Òµ{Â²¤¶¡m¸gµ¸¥Í¬¡¡B°·±d§Ö¬¡¡n¡]4/25 §ó·s¡^</h2>
+<p>¡¹ «ö¼¯¤£¶ÈÅý¨­Åéµd¿ô¡A¸Ñ¶}ªý¶ë»P¯h³Ò¡AÁÙ¯à¼W¶i¤Ò©d»P¿Ë¤l¶¡ªºÃö«Y~ <br />
+¡¹ ¾i¥Í¦ã¨b¡G¥H¦ã¯ó©Ò»s§@ªº¦ã±ø¨Ó°µ¤HÅé¥Þ¦ìªº·Å¨bºÙ¡u¦ã¨b¡v¡A¤¤Âå²zÀøªº«D«I¤J©ÊÀøªk~</p>
+<a name="intro_a"></a>
+<h3><a name="TOC--2"></a><b><span style="color:rgb(0,0,255)"><span style="background-color:rgb(255,255,255)">¾i¥Í¸gµ¸«ö¼¯</span></span></b> ½Òµ{Â²¤¶¡G</h3>
+<p>
+ «ö¼¯¤£¶ÈÅý¨­Åéµd¿ô¡A¸Ñ¶}ªý¶ë»P¯h³Ò¡AÁÙ¯à¼W¶i¤Ò©d»P¿Ë¤l¶¡ªºÃö«Y~ Åý§Ú­Ì¤@°_³z¹L«ö¼¯Åý§Ú­Ì¬°¦Û¤v¤]¬°®a¤HªB¤Íªº¨­Åéª`¤J·Rªº¯à¶q¡C¸gµ¸¥Í¬¡¾i¥Í¸gµ¸¥Þ¦ì«ö¼¯ ªì¶¥¯Z¶}©l©Û¥Í¡AÅwªï³ß·R«ö¼¯ªºªB¤Í¤@°_¥[¤J!</p>
+<p> ¡½ ½Òµ{¤¶²Ð¡G<br />
+ ¥»½Òµ{±N¥÷¬°ªì¡B¤¤¡B°ª¤T­Ó¶¥¬q¨Ó¶i¦æ¡A±N³z¹L¹ê»Úªºµø¶E»PÄ²¶E¨Ó¤F¸Ñ¨C¤@­Ó¤£¦P®×¨Òªº¨­Åéª¬ªp¡A¨Ã³z¹L²zÀøªº«ö¼¯¾Ç¡A¨Ó²z¸Ñ¨­Åé¦U¥Þ¦ì»P¸gµ¸¹ïÀ³ªº¾¹©x»P¥Í²z»P¤ß²zª¬ªp¡A¦A¸g¥Ñ¹ê»Úªº¾Þ§@½m²ß¹F¨ì¨­Åé¦Û§Ú«O°·ªº¥\®Ä¡C</p>
+<p> ¡½ ªì¯Å½Òµ{¤º®e¡G<br />
+ ²Ä¤@°ó¡G¶}¤âµ¬<br />
+ ²Ä¤G°ó¡G¥þÀY³¡©ñÃP<br />
+ ²Ä¤T°ó¡G¤­¤QªÓ¡B½¹½º³S<br />
+ ²Ä¥|°ó¡GÁy³¡¥­¿Å+²´À£³B²z</p>
+<p> ¡½ ¤W½Ò®É¶¡¡G<br />
+ ¥x¥_¯Z- (©P¤G)±ß¤W6:30-8:30, 5/17 5/24 5/31 6/7<br />
+ ·s¦Ë¯Z- (©P¤»)¤U¤È2:00-4:00, 5/14 5/21 5/28 6/4</p>
+<p> ¡½ ¤W½Ò¦aÂI¡G<br />
+ 1.¥x¥_ ¥Á¥ÍªÀ°Ï 2.·s¦Ë ¥¨«°ªþªñ</p>
+<p>¡½ ½Òµ{¶O¥Î¡G¥|°ó 8¤p®É ¦@NT$2,600<br />
+</p>
+<a name="intro_b"></a>
+<h3><a name="TOC--3"></a><span style="color:rgb(0,0,255)"><b>¾i¥Í¦ã¨b</b></span> ½Òµ{Â²¤¶¡G</h3>
+<p>
+
+¦ã¨b¥D­n¬O¥H¦ã¯ó©Ò»s§@ªº¦ã±ø¨Ó°µ¤HÅé¥Þ¦ìªº·Å¨bºÙ¦ã¨b¡A³o¬O¤@ºØ¸g±`³Q¹B¥Î¦b¤¤Âå²zÀøªº«D«I¤J©ÊÀøªk¡C¦ã¯ó¥¦¬O¤@ºØ¥Í©R¤O«D±`©ô²±ªºÃÄ¯ó¡A§ó³QºÙ¬°¦Ê¯ó
+¤§¤ý¡A¾§®a©s¤l´¿»¡¡G¡u¤C¦~¤§¯f¡A¨D¤T¦~¤§¦ã¡v¥¿¬O¦b»¡¦ã¯óªº§®¥Î¡C¥»½Òµ{±N±Ð¾É±q»{ÃÑ¨­Åé¥Þ¦ì¡A¨Ã³z¹L¥¿½T¦ã¨bªº¨Ï¥Î¨Ó«P¶i¨­Åé°·±d¡A¨Ã¤@¿s³oºØ¨Ó¦Û¤¤
+°ê¦Ñ¯ª©v´¼¼zªº¾i¥Í¤§¹D¡C</p>
+<p> ¡½ ½Òµ{¤º®e¡G<br />
+ 1. ¤HÅé¸gµ¸¥Þ¦ì»P¾i¥Í­ì²z<br />
+ 2. ¦ã¨bªº¾Þ§@»P¹ê°È½m²ß<br />
+ 3. ¦ã¨bªº¤é±`¥Í¬¡¹B¥Î</p>
+<p> ¡½ ¤W½Ò®É¶¡¡G<br />
+ ·s¦Ë³õ5/14(¤»)¤W¤È10:00-12:00</p>
+<p> ¡½ ¤W½Ò¦aÂI¡G<br />
+ ·s¦Ë¡G·s¦Ë¥¨«°®Ç</p>
+<p> ¡½ ½Òµ{¶O¥Î¡G¤@°óNT$1,250<br />
+ (¥H¤W¶O¥Î¥]§tÁ¿¸q¡B¤HÅé¸gµ¸¹Ï¡B¦ã¨b¾¹¨ã¤@®M¤Î¦ã±ø ¥«»ùNT$1,000)<br />
+</p>
+<h3><a name="TOC--4"></a> <b><span style="color:rgb(0,0,255)">Á¿®vÂ²¾ú</span></b></h3>
+<p>
+ ¥v®a¥­<br />
+ ¤¤°ê¤å¤Æ¤j¾Ç±À¼s³¡±M·~¸gµ¸®v°ö°V»{ÃÒ¯Z§U²zÁ¿®v<br />
+ ¤ß¼Ö»R¨­¤ß¦¨ªø¤u§@§{Á¿®v<br />
+ ¤¤µØ­s¦t¬y¦ÛµMÀøªk¨ó·|»{ÃÒ¤â¯Å¸gµ¸®v<br />
+ ¸gµ¸«ö¼¯²zÀøÁ{§É¸gÅç¤C¦~<br />
+ ¿D¬wGriffith University ¥D­×¥ð¶¢²£·~ºÞ²z<br />
+ (Á¿®v¬ÛÃö¸ê°T½Ð¨£¤¤µØ­s¦t¬y¦ÛµMÀøªk¨ó·| <a href="http://www.8dhappy.com/yellowpage/g2.htm" rel="nofollow" target="_blank">http://www.8dhappy.com/yellowpage/g2.htm</a> )</p>
+                    <P>¡@</P>
             </TD>
         </TR>
     </TABLE>
