Added files via upload

--- a/index.html
+++ b/index.html
@@ -1,103 +1,44 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
 
-<HTML>
-<HEAD>
-    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>《經絡生活、健康快活》</title>
+</head>
 
-    <TITLE>ꅭ롧떸ꗍ겡ꅂ낷녤Ꟗ겡ꅮ</TITLE>
-</HEAD>
+<body>
 
-<BODY>
-    <H2>ꅀꅀꅀꅀꅭ롧떸ꗍ겡ꅂ낷녤Ꟗ겡ꅮ</H2>
+<h2>《經絡生活、健康快活》</h2>
 
-    <TABLE BORDER="0" WIDTH="88%" ID="table1" SUMMARY="">
-        <TR>
-            <TD WIDTH="200">ꅀ</TD>
+<table border="0" width="88%" id="table1">
+				<tr>
+								<td width="200">　</td>
+								<td>
 
-            <TD>
-                <H2 DIR="ltr" XMLNS="http://www.w3.org/1999/xhtml" STYLE="" ALIGN="left"><SPAN STYLE="font-weight: 400"><SPAN ID="sites-page-title">돸ꙗ녺돟앷ꪺ뷒땻</SPAN></SPAN></H2>ꆹ 빩ꗍꛣꡢꅇꕈꛣ꿳꧒뭳Ꝁꪺꛣ뇸꣓낵ꑈ엩ꗞꛬꪺ럅ꡢ뫙ꅵꛣꡢꅶꅁ꒤싥뉺샸ꪺꭄꭉꑊ꧊샸ꩫ~ <A HREF="#intro_b">ꅋꅋꟳꙨ</A><BR>
-                ꆹ ꯶벯꒣뛈엽ꢭ엩땤뿴ꅁ룑뙽꫽뛫뭐꽨돒ꅁ쇙꿠뱗뙩ꓒꥤ뭐뿋ꑬ뚡ꪺ쏶ꭙ~ <A HREF="#intro_a">ꅋꅋꟳꙨ</A>
+<h3 dir="ltr" xmlns="http://www.w3.org/1999/xhtml" style="" align="left">
+<span style="font-weight: 400">
+<span id="sites-page-title">報名您喜歡的課程</span></span></h3>
 
-                <P>ꅀ<IMG SRC="images/CapturedPic_059.png" ALT=""></P>
+								★ 養生艾灸：以艾草所製作的艾條來做人體穴位的溫灸稱「艾灸」，中醫理療的非侵入性療法~
+								<a href="https://sites.google.com/site/jinglou888reg/home?pli=1#intro_b">
+								……更多</a><br>
+								★ 按摩不僅讓身體甦醒，解開阻塞與疲勞，還能增進夫妻與親子間的關係~
+								<a href="https://sites.google.com/site/jinglou888reg/home?pli=1#intro_a">
+								……更多</a><p>　<img src="images/CapturedPic_059.png"> 
+<h3 style="clear:both;text-align:left">經絡按摩班： </h3>
+<p style="clear:both;text-align:left;margin-left:40px">台北班- (周二)晚上6:30-8:30, 
+5/17 5/24 5/31 6/7 （額滿）<br>
+　　－ </p>
+<p style="clear:both;text-align:left;margin-left:40px">新竹班- (周六)下午2:00-4:00, 
+5/14 5/21 5/28 6/4</p>
+<div style="margin-left:40px">
+				<a href="http://goo.gl/forms/WrLbt5chLf">
+				<img src="images/register.PNG" style="display:block;margin-right:auto;text-align:left" border="0"></a>
 
-                <H3 STYLE="clear:both;text-align:left">롧떸꯶벯꽚ꅇ</H3>
+</div>
+<p>　</td>
+				</tr>
+</table>
 
-                <P STYLE="clear:both;text-align:left;margin-left:40px">ꕸꕟ꽚- ꒭ꓫ꽚 썂몡<BR>
-                ꅀꅀꇐ</P>
+</body>
 
-                <P STYLE="clear:both;text-align:left;margin-left:40px">띳ꛋ꽚- (ꥐ꒻)ꑕ꓈2:00-4:00, 5/14 5/21 5/28 6/4</P>
-
-                <DIV STYLE="margin-left:40px">
-                    <A HREF="http://goo.gl/forms/WrLbt5chLf"><IMG SRC="images/register.PNG" STYLE="display:block;margin-right:auto;text-align:left" BORDER="0" ALT=""></A><BR>
-                </DIV>
-
-                <H3 STYLE="clear:both;text-align:left">빩ꗍꛣꡢ꽚ꅇ</H3>
-
-                <P STYLE="clear:both;text-align:left;margin-left:40px">띳ꛋ꽚- (ꥐ꒻)ꑗ꓈10:00-12:00, 5/14</P>
-
-                <DIV STYLE="margin-left:40px">
-                    <A HREF="http://goo.gl/forms/dqcN7zI9Gv"><IMG SRC="images/register.PNG" STYLE="display:block;margin-right:auto;text-align:left" BORDER="0" ALT=""></A><BR>
-                </DIV>
-                <HR STYLE="background-color:#000000;color:#000000;width:100%;text-align:left">
-
-                <H2><A NAME="TOC-4-25-" ID="TOC-4-25-"></A>뷒땻슲꒶ꅭ롧떸ꗍ겡ꅂ낷녤Ꟗ겡ꅮꅝ4/25 ꟳ띳ꅞ</H2>
-
-                <P>ꆹ ꯶벯꒣뛈엽ꢭ엩땤뿴ꅁ룑뙽꫽뛫뭐꽨돒ꅁ쇙꿠뱗뙩ꓒꥤ뭐뿋ꑬ뚡ꪺ쏶ꭙ~<BR>
-                ꆹ 빩ꗍꛣꡢꅇꕈꛣ꿳꧒뭳Ꝁꪺꛣ뇸꣓낵ꑈ엩ꗞꛬꪺ럅ꡢ뫙ꅵꛣꡢꅶꅁ꒤싥뉺샸ꪺꭄꭉꑊ꧊샸ꩫ~</P><A NAME="intro_a" ID="intro_a"></A>
-
-                <H3><A NAME="TOC--2" ID="TOC--2"></A><STRONG><SPAN STYLE="color:rgb(0,0,255)"><SPAN STYLE="background-color:rgb(255,255,255)">빩ꗍ롧떸꯶벯</SPAN></SPAN></STRONG> 뷒땻슲꒶ꅇ</H3>
-
-                <P>꯶벯꒣뛈엽ꢭ엩땤뿴ꅁ룑뙽꫽뛫뭐꽨돒ꅁ쇙꿠뱗뙩ꓒꥤ뭐뿋ꑬ뚡ꪺ쏶ꭙ~ 엽Ꟛ귌ꑀ끟덺륌꯶벯엽Ꟛ귌결ꛛꑶꑝ결깡ꑈꩂ꓍ꪺꢭ엩ꩠꑊ띒ꪺ꿠뙱ꅃ롧떸ꗍ겡빩ꗍ롧떸ꗞꛬ꯶벯 ꫬ뚥꽚뙽ꥬ꧛ꗍꅁ앷ꫯ돟띒꯶벯ꪺꩂ꓍ꑀ끟ꕛꑊ!</P>
-
-                <P>ꆽ 뷒땻꒶닐ꅇ<BR>
-                ꖻ뷒땻녎ꗷ결ꫬꅂ꒤ꅂ낪ꑔ귓뚥걱꣓뙩ꛦꅁ녎덺륌맪믚ꪺ뗸뙅뭐쒲뙅꣓ꑆ룑ꡃꑀ귓꒣Ꙑ껗꣒ꪺꢭ엩ꪬꩰꅁꣃ덺륌뉺샸ꪺ꯶벯뻇ꅁ꣓뉺룑ꢭ엩ꙕꗞꛬ뭐롧떸맯삳ꪺ뺹ꥸ뭐ꗍ뉺뭐ꓟ뉺ꪬꩰꅁꙁ롧ꗑ맪믚ꪺ뻞Ꝁ뵭닟륆꣬ꢭ엩ꛛꟚꭏ낷ꪺꕜ껄ꅃ</P>
-
-                <P>ꆽ ꫬ꿅뷒땻꒺깥ꅇ<BR>
-                닄ꑀ냳ꅇ뙽ꓢ떬<BR>
-                닄ꑇ냳ꅇꗾ쁙뎡꧱썐<BR>
-                닄ꑔ냳ꅇ꒭ꑑ꫓ꅂ붹붺덓<BR>
-                닄ꕼ냳ꅇ셹뎡ꖭ뿅+늴삣덂뉺</P>
-
-                <P>ꆽ ꑗ뷒껉뚡ꅇ<BR>
-                ꕸꕟ꽚- (ꥐꑇ)뇟ꑗ6:30-8:30, 5/17 5/24 5/31 6/7<BR>
-                띳ꛋ꽚- (ꥐ꒻)ꑕ꓈2:00-4:00, 5/14 5/21 5/28 6/4</P>
-
-                <P>ꆽ ꑗ뷒ꙡ쉉ꅇ<BR>
-                1.ꕸꕟ ꗁꗍꫀ냏 2.띳ꛋ ꖨꮰ꫾꫱</P>
-
-                <P>ꆽ 뷒땻뙏ꗎꅇꕼ냳 8ꑰ껉 ꙀNT$2,600<BR></P><A NAME="intro_b" ID="intro_b"></A>
-
-                <H3><A NAME="TOC--3" ID="TOC--3"></A><SPAN STYLE="color:rgb(0,0,255)"><STRONG>빩ꗍꛣꡢ</STRONG></SPAN> 뷒땻슲꒶ꅇ</H3>
-
-                <P>ꛣꡢꕄ굮걏ꕈꛣ꿳꧒뭳Ꝁꪺꛣ뇸꣓낵ꑈ엩ꗞꛬꪺ럅ꡢ뫙ꛣꡢꅁ덯걏ꑀ뫘롧녠덑륂ꗎꙢ꒤싥뉺샸ꪺꭄꭉꑊ꧊샸ꩫꅃꛣ꿳ꖦ걏ꑀ뫘ꗍꥒꑏꭄ녠꧴늱ꪺ쏄꿳ꅁꟳ덑뫙결ꛊ꿳 ꒧ꓽꅁ뺧깡ꥳꑬ뒿뮡ꅇꅵꑃ꙾꒧꽦ꅁꡄꑔ꙾꒧ꛣꅶꖿ걏Ꙣ뮡ꛣ꿳ꪺꞮꗎꅃꖻ뷒땻녎뇐뻉녱뭻쏑ꢭ엩ꗞꛬꅁꣃ덺륌ꖿ뵔ꛣꡢꪺ꣏ꗎ꣓ꭐ뙩ꢭ엩낷녤ꅁꣃꑀ뽳덯뫘꣓ꛛ꒤ 냪ꛑ꾪ꥶ뒼뱺ꪺ빩ꗍ꒧륄ꅃ</P>
-
-                <P>ꆽ 뷒땻꒺깥ꅇ<BR>
-                1. ꑈ엩롧떸ꗞꛬ뭐빩ꗍ귬뉺<BR>
-                2. ꛣꡢꪺ뻞Ꝁ뭐맪냈뵭닟<BR>
-                3. ꛣꡢꪺꓩ녠ꗍ겡륂ꗎ</P>
-
-                <P>ꆽ ꑗ뷒껉뚡ꅇ<BR>
-                띳ꛋ돵5/14(꒻)ꑗ꓈10:00-12:00</P>
-
-                <P>ꆽ ꑗ뷒ꙡ쉉ꅇ<BR>
-                띳ꛋꅇ띳ꛋꖨꮰ껇</P>
-
-                <P>ꆽ 뷒땻뙏ꗎꅇꑀ냳NT$1,250<BR>
-                (ꕈꑗ뙏ꗎꕝꝴ솿롱ꅂꑈ엩롧떸맏ꅂꛣꡢ뺹꣣ꑀ깍꓎ꛣ뇸 ꖫ믹NT$1,000)<BR></P>
-
-                <H3><A NAME="TOC--4" ID="TOC--4"></A> <STRONG><SPAN STYLE="color:rgb(0,0,255)">솿깶슲뻺</SPAN></STRONG></H3>
-
-                <P>ꕶ깡ꖭ<BR>
-                ꒤냪ꓥ꓆ꑪ뻇뇀뱳뎡녍띾롧떸깶냶끖뭻쏒꽚ꝕ뉺솿깶<BR>
-                ꓟ볖뭒ꢭꓟꚨ꫸ꑵꝀꝻ솿깶<BR>
-                ꒤뗘굳ꙴ걹ꛛ땍샸ꩫꣳ라뭻쏒ꓢ꿅롧떸깶<BR>
-                롧떸꯶벯뉺샸셻Ꟊ롧엧ꑃ꙾<BR>
-                뽄걷Griffith University ꕄ귗ꗰ뚢늣띾뫞뉺<BR>
-                (솿깶곛쏶룪끔뷐ꢣ꒤뗘굳ꙴ걹ꛛ땍샸ꩫꣳ라 <A HREF="http://www.8dhappy.com/yellowpage/g2.htm" REL="nofollow" TARGET="_blank">http://www.8dhappy.com/yellowpage/g2.htm</A> )</P>
-
-                <P>ꅀ</P>
-            </TD>
-        </TR>
-    </TABLE>
-</BODY>
-</HTML>
+</html>
