--- a/index.html
+++ b/index.html
@@ -5,40 +5,93 @@
 <title>《經絡生活、健康快活》</title>
 </head>
 
-<body>
+<BODY>
+    <H2>　　　　《經絡生活、健康快活》</H2>
 
-<h2>《經絡生活、健康快活》</h2>
+    <TABLE BORDER="0" WIDTH="88%" ID="table1" SUMMARY="">
+        <TR>
+            <TD WIDTH="200">　</TD>
 
-<table border="0" width="88%" id="table1">
-				<tr>
-								<td width="200">　</td>
-								<td>
+            <TD>
+                <H2 DIR="ltr" XMLNS="http://www.w3.org/1999/xhtml" STYLE="" ALIGN="left"><SPAN STYLE="font-weight: 400"><SPAN ID="sites-page-title">報名您喜歡的課程</SPAN></SPAN></H2>★ 養生艾灸：以艾草所製作的艾條來做人體穴位的溫灸稱「艾灸」，中醫理療的非侵入性療法~ <A HREF="#intro_b">……更多</A><BR>
+                ★ 按摩不僅讓身體甦醒，解開阻塞與疲勞，還能增進夫妻與親子間的關係~ <A HREF="#intro_a">……更多</A>
 
-<h3 dir="ltr" xmlns="http://www.w3.org/1999/xhtml" style="" align="left">
-<span style="font-weight: 400">
-<span id="sites-page-title">報名您喜歡的課程</span></span></h3>
+                <P>　<IMG SRC="images/CapturedPic_059.png" ALT=""></P>
 
-								★ 養生艾灸：以艾草所製作的艾條來做人體穴位的溫灸稱「艾灸」，中醫理療的非侵入性療法~
-								<a href="https://sites.google.com/site/jinglou888reg/home?pli=1#intro_b">
-								……更多</a><br>
-								★ 按摩不僅讓身體甦醒，解開阻塞與疲勞，還能增進夫妻與親子間的關係~
-								<a href="https://sites.google.com/site/jinglou888reg/home?pli=1#intro_a">
-								……更多</a><p>　<img src="images/CapturedPic_059.png"> 
-<h3 style="clear:both;text-align:left">經絡按摩班： </h3>
-<p style="clear:both;text-align:left;margin-left:40px">台北班- (周二)晚上6:30-8:30, 
-5/17 5/24 5/31 6/7 （額滿）<br>
-　　－ </p>
-<p style="clear:both;text-align:left;margin-left:40px">新竹班- (周六)下午2:00-4:00, 
-5/14 5/21 5/28 6/4</p>
-<div style="margin-left:40px">
-				<a href="http://goo.gl/forms/WrLbt5chLf">
-				<img src="images/register.PNG" style="display:block;margin-right:auto;text-align:left" border="0"></a>
+                <H3 STYLE="clear:both;text-align:left">經絡按摩班：</H3>
 
-</div>
-<p>　</td>
-				</tr>
-</table>
+                <P STYLE="clear:both;text-align:left;margin-left:40px">台北班- 五月班 額滿<BR>
+                　　－</P>
 
-</body>
+                <P STYLE="clear:both;text-align:left;margin-left:40px">新竹班- (周六)下午2:00-4:00, 5/14 5/21 5/28 6/4</P>
+
+                <DIV STYLE="margin-left:40px">
+                    <A HREF="http://goo.gl/forms/WrLbt5chLf"><IMG SRC="images/register.PNG" STYLE="display:block;margin-right:auto;text-align:left" BORDER="0" ALT=""></A>
+                    <BR>
+                </DIV>
+
+                <H3 STYLE="clear:both;text-align:left">養生艾灸班：</H3>
+
+                <P STYLE="clear:both;text-align:left;margin-left:40px">新竹班- (周六)上午10:00-12:00, 5/14</P>
+
+                <DIV STYLE="margin-left:40px">
+                    <A HREF="http://goo.gl/forms/dqcN7zI9Gv"><IMG SRC="images/register.PNG" STYLE="display:block;margin-right:auto;text-align:left" BORDER="0" ALT=""></A>
+                    <BR>
+                </DIV>
+
+<hr style="background-color:#000000;color:#000000;width:100%;text-align:left" />
+<h2><a name="TOC-4-25-"></a>課程簡介《經絡生活、健康快活》（4/25 更新）</h2>
+<p>★ 按摩不僅讓身體甦醒，解開阻塞與疲勞，還能增進夫妻與親子間的關係~ <br />
+★ 養生艾灸：以艾草所製作的艾條來做人體穴位的溫灸稱「艾灸」，中醫理療的非侵入性療法~</p>
+<a name="intro_a"></a>
+<h3><a name="TOC--2"></a><b><span style="color:rgb(0,0,255)"><span style="background-color:rgb(255,255,255)">養生經絡按摩</span></span></b> 課程簡介：</h3>
+<p>
+ 按摩不僅讓身體甦醒，解開阻塞與疲勞，還能增進夫妻與親子間的關係~ 讓我們一起透過按摩讓我們為自己也為家人朋友的身體注入愛的能量。經絡生活養生經絡穴位按摩 初階班開始招生，歡迎喜愛按摩的朋友一起加入!</p>
+<p> ■ 課程介紹：<br />
+ 本課程將份為初、中、高三個階段來進行，將透過實際的視診與觸診來了解每一個不同案例的身體狀況，並透過理療的按摩學，來理解身體各穴位與經絡對應的器官與生理與心理狀況，再經由實際的操作練習達到身體自我保健的功效。</p>
+<p> ■ 初級課程內容：<br />
+ 第一堂：開手筋<br />
+ 第二堂：全頭部放鬆<br />
+ 第三堂：五十肩、蝴蝶袖<br />
+ 第四堂：臉部平衡+眼壓處理</p>
+<p> ■ 上課時間：<br />
+ 台北班- (周二)晚上6:30-8:30, 5/17 5/24 5/31 6/7<br />
+ 新竹班- (周六)下午2:00-4:00, 5/14 5/21 5/28 6/4</p>
+<p> ■ 上課地點：<br />
+ 1.台北 民生社區 2.新竹 巨城附近</p>
+<p>■ 課程費用：四堂 8小時 共NT$2,600<br />
+</p>
+<a name="intro_b"></a>
+<h3><a name="TOC--3"></a><span style="color:rgb(0,0,255)"><b>養生艾灸</b></span> 課程簡介：</h3>
+<p>
+
+艾灸主要是以艾草所製作的艾條來做人體穴位的溫灸稱艾灸，這是一種經常被運用在中醫理療的非侵入性療法。艾草它是一種生命力非常旺盛的藥草，更被稱為百草
+之王，儒家孟子曾說：「七年之病，求三年之艾」正是在說艾草的妙用。本課程將教導從認識身體穴位，並透過正確艾灸的使用來促進身體健康，並一窺這種來自中
+國老祖宗智慧的養生之道。</p>
+<p> ■ 課程內容：<br />
+ 1. 人體經絡穴位與養生原理<br />
+ 2. 艾灸的操作與實務練習<br />
+ 3. 艾灸的日常生活運用</p>
+<p> ■ 上課時間：<br />
+ 新竹場5/14(六)上午10:00-12:00</p>
+<p> ■ 上課地點：<br />
+ 新竹：新竹巨城旁</p>
+<p> ■ 課程費用：一堂NT$1,250<br />
+ (以上費用包含講義、人體經絡圖、艾灸器具一套及艾條 市價NT$1,000)<br />
+</p>
+<h3><a name="TOC--4"></a> <b><span style="color:rgb(0,0,255)">講師簡歷</span></b></h3>
+<p>
+ 史家平<br />
+ 中國文化大學推廣部專業經絡師培訓認證班助理講師<br />
+ 心樂舞身心成長工作坊講師<br />
+ 中華貞宇流自然療法協會認證手級經絡師<br />
+ 經絡按摩理療臨床經驗七年<br />
+ 澳洲Griffith University 主修休閒產業管理<br />
+ (講師相關資訊請見中華貞宇流自然療法協會 <a href="http://www.8dhappy.com/yellowpage/g2.htm" rel="nofollow" target="_blank">http://www.8dhappy.com/yellowpage/g2.htm</a> )</p>
+                    <P>　</P>
+            </TD>
+        </TR>
+    </TABLE>
+</BODY>
 
 </html>
