Added files via upload

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <TD WIDTH="200">　</TD>
 
             <TD>
-                <H2 DIR="ltr" XMLNS="http://www.w3.org/1999/xhtml" STYLE="" ALIGN="left"><SPAN STYLE="font-weight: 400"><SPAN ID="sites-page-title">報名您喜歡的課程</SPAN></SPAN></H2>★ 養生艾灸：以艾草所製作的艾條來做人體穴位的溫灸稱「艾灸」，中醫理療的非侵入性療法~ <A HREF="#intro_b">……更多</A><BR>
-                ★ 按摩不僅讓身體甦醒，解開阻塞與疲勞，還能增進夫妻與親子間的關係~ <A HREF="#intro_a">……更多</A>
+                <H2 DIR="ltr" XMLNS="http://www.w3.org/1999/xhtml" STYLE="" ALIGN="left"><SPAN STYLE="font-weight: 400"><SPAN ID="sites-page-title">報名您喜歡的課程</SPAN></SPAN></H2>★ 養生艾灸：以艾草所製作的艾條來做人體穴位的溫灸稱「艾灸」，中醫理療的非侵入性療法~ <A HREF="#intro_b" STYLE="text-decoration: none">……更多</A><BR>
+                ★ 按摩不僅讓身體甦醒，解開阻塞與疲勞，還能增進夫妻與親子間的關係~ <A HREF="#intro_a" STYLE="text-decoration: none">……更多</A>
 
                 <P>　<IMG SRC="images/CapturedPic_059.png" ALT=""></P>
 
@@ -25,7 +25,8 @@
                 <P STYLE="clear:both;text-align:left;margin-left:40px">台北班- 五月班 額滿<BR>
                 　　－</P>
 
-                <P STYLE="clear:both;text-align:left;margin-left:40px">新竹班- (周六)下午2:00-4:00, 5/14 5/21 5/28 6/4</P>
+                <P STYLE="clear:both;text-align:left;margin-left:40px">新竹班- (周六)下午2:00-4:00, 5/14 5/21 5/28 6/4
+				<font size="2" color="#FF0000">(尚餘數: 2)</font></P>
 
                 <DIV STYLE="margin-left:40px">
                     <A HREF="http://goo.gl/forms/WrLbt5chLf"><IMG SRC="images/register.PNG" STYLE="display:block;margin-right:auto;text-align:left" BORDER="0" ALT=""></A><BR>
@@ -33,7 +34,8 @@
 
                 <H3 STYLE="clear:both;text-align:left">養生艾灸班：</H3>
 
-                <P STYLE="clear:both;text-align:left;margin-left:40px">新竹班- (周六)上午10:00-12:00, 5/14</P>
+                <P STYLE="clear:both;text-align:left;margin-left:40px">新竹班- (周六)上午10:00-12:00, 5/14
+				<font size="2" color="#FF0000">(尚餘數: 2)</font></P>
 
                 <DIV STYLE="margin-left:40px">
                     <A HREF="http://goo.gl/forms/dqcN7zI9Gv"><IMG SRC="images/register.PNG" STYLE="display:block;margin-right:auto;text-align:left" BORDER="0" ALT=""></A><BR>
